# spring-player

./: .buildconfig  .clang-format  .gitignore  CMakeLists.txt  build_deps_ubuntu.txt  me.kicsyromy.spring-player.json  meson.build  spring-player.config  spring-player.files  spring-player.includes
cmake/: ClangFormat.cmake  GResource.cmake  GSettings.cmake  Translations.cmake
data/: application.appdata.xml.in.in  desktop.in.in  meson.build
meson/: meson.build
po/: CMakeLists.txt  me.kicsyromy.spring-player.pot  ro.po
po/extra/: POTFILES  extra.pot
resources/: CMakeLists.txt  desktop.in
schemas/: CMakeLists.txt  me.kicsyromy.spring-player.gschema.xml.in
src/: CMakeLists.txt  album_widget.cpp  albums_page.cpp  application_settings.cpp  artist_browse_page.cpp  artist_widget.cpp  artists_page.cpp  async_queue.cpp  genres_page.cpp  gstreamer_pipeline.cpp  header_bar.cpp  main.cpp  main_window.cpp  meson.build  now_playing_list.cpp  now_playing_sidebar.cpp  page_stack.cpp  page_stack_swicher.cpp  playback_buffer.cpp  playback_footer.cpp  playback_header.cpp  playback_list.cpp  playlist_sidebar.cpp  plex_session.cpp  resource_cache.cpp  server_setup_dialog.cpp  songs_page.cpp  spring_player.cpp  spring_player.h  thumbnail.cpp  thumbnail_page.cpp  thumbnail_widget.cpp  track_list_popover.cpp  welcome_page.cpp
src/include/: album_widget.h  albums_page.h  application_settings.h  artist_browse_page.h  artist_widget.h  artists_page.h  async_queue.h  common.h  genres_page.h  gstreamer_pipeline.h  header_bar.h  main_window.h  now_playing_list.h  now_playing_sidebar.h  page_stack.h  page_stack_swicher.h  playback_buffer.h  playback_footer.h  playback_header.h  playback_list.h  playlist_sidebar.h  plex_session.h  resource_cache.h  resource_cache.tpp  server_setup_dialog.h  songs_page.h  spring_player.h  thumbnail.h  thumbnail_page.h  thumbnail_page.tpp  thumbnail_widget.h  thumbnail_widget.tpp  utility.h  welcome_page.h
src/libspring/: CMakeLists.txt
src/libspring/cmake/: LinuxConfig.cmake
src/libspring/docs/: Doxyfile.in  conf.py.in  index.rst  test.rst
src/libspring/include/: libspring_error.h  libspring_global.h  libspring_library_section.h  libspring_logger.h  libspring_media_library.h  libspring_movie_library.h  libspring_music_album.h  libspring_music_artist.h  libspring_music_genre.h  libspring_music_library.h  libspring_music_track.h  libspring_optional.h  libspring_plex_media_server.h  libspring_tv_show_library.h  libspring_video_library.h
src/libspring/src/: libspring_http_client.cpp  libspring_library_section.cpp  libspring_logger.cpp  libspring_media_library.cpp  libspring_music_album.cpp  libspring_music_artist.cpp  libspring_music_genre.cpp  libspring_music_library.cpp  libspring_music_track.cpp  libspring_plex_media_server.cpp  libspring_utilities.cpp
src/libspring/src/include/: libspring_http_client_p.h  libspring_library_section_p.h  libspring_logger_p.h  libspring_media_library_p.h  libspring_music_album_p.h  libspring_music_artist_p.h  libspring_music_genre_p.h  libspring_music_library_p.h  libspring_music_track_p.h  libspring_plex_media_server_p.h  libspring_user_properties_p.h  libspring_utilities_p.h  libspring_vla_p.h
src/playback/: meson.build
src/playback/include/playback/: buffer.h  gstreamer_pipeline.h  playlist.h
src/playback/src/: buffer.cpp  gstreamer_pipeline.cpp  playlist.cpp
src/plex/: meson.build
src/plex/include/plex/: session.h
src/plex/src/: session.cpp
src/ui/: CMakeLists.txt  album_list_popover.ui  album_widget.ui  app_menu.ui  artist_browse_page.ui  artist_widget.ui  header_bar.ui  main_window.ui  meson.build  page_stack_switcher.ui  playlist_item.ui  playlist_sidebar.ui  server_setup_dialog.ui  thumbnail_page.ui  thumbnail_widget.ui  track_list_popover.ui  track_widget.ui
src/ui/css/: application_style.css  artwork.css  page_stack_switcher.css
src/ui/include/ui/: artist_browse_page.h  header_bar.h  main_window.h  page_stack.h  page_stack_swicher.h  playlist_sidebar.h  server_setup_dialog.h  songs_page.h  thumbnail.h  thumbnail_page.h  thumbnail_page.tpp  thumbnail_widget.h  thumbnail_widget.tpp  track_list_popover.h  welcome_page.h
src/ui/reworked/: artwork_layout.ui  artwork_widget.ui  header_bar.ui  main_window.ui  playlist_sidebar.ui  track_list_popover.ui
src/ui/src/: artist_browse_page.cpp  header_bar.cpp  main_window.cpp  page_stack.cpp  page_stack_swicher.cpp  playlist_sidebar.cpp  server_setup_dialog.cpp  songs_page.cpp  thumbnail.cpp  track_list_popover.cpp  welcome_page.cpp
src/ui/templates/: me.kicsyromy.spring-player.ui.gresource.xml  thumbnail_page.ui  track_widget.ui
src/ui/templates/css/: application_style.css
src/utility/: CMakeLists.txt  compatibility.h  exponential_blur.h  forward_declarations.h  fuzzy_search.h  g_object_guard.h  global.h  gtk_helpers.h  meson.build  pixbuf_loader.h  posix_fd.h  signals.h
src/utility/include/: algorithms.h  compatibility.h  gtk_helpers.h  gtk_ref_guard.h  signals.h  utility.h
src/utility/include/utility/: async_queue.h  fuzzy_search.h  global.h  gtk_helpers.h  posix_fd.h  resource_cache.h  settings.h
src/utility/src/: async_queue.cpp  settings.cpp
subprojects/libspring/: meson.build  meson_options.txt
subprojects/libspring/cmake/: ClangFormat.cmake  ConfigureTarget.cmake  Documentation.cmake  WindowsConfig.cmake  macOSConfig.cmake
subprojects/libspring/docs/: Doxyfile.in  meson.build  test.rst
subprojects/libspring/include/: libspring_config.h.in  libspring_logger.h  libspring_movie_library.h  libspring_music_artist.h  libspring_music_library.h  libspring_music_track.h  libspring_optional.h
subprojects/libspring/src/: libspring_error.cpp  libspring_logger.cpp  libspring_movie_library.cpp  libspring_music_album.cpp  libspring_music_artist.cpp  libspring_music_track.cpp  libspring_plex_media_server.cpp  libspring_utilities.cpp
subprojects/libspring/src/include/: libspring_music_album_p.h  libspring_music_genre_p.h  libspring_music_library_p.h  libspring_plex_media_server_p.h
