include_dirs += include_directories('include')

headers += files(
    'include/ui/artist_browse_page.h',
    'include/ui/header_bar.h',
    'include/ui/main_window.h',
    'include/ui/page_stack.h',
    'include/ui/page_stack_swicher.h',
    'include/ui/playlist_sidebar.h',
    'include/ui/server_setup_dialog.h',
    'include/ui/songs_page.h',
    'include/ui/thumbnail.h',
    'include/ui/thumbnail_page.h',
    'include/ui/thumbnail_widget.h',
    'include/ui/track_list_popover.h',
    'include/ui/welcome_page.h'
)

sources += files(
    'src/artist_browse_page.cpp',
    'src/header_bar.cpp',
    'src/main_window.cpp',
    'src/page_stack_swicher.cpp',
    'src/page_stack.cpp',
    'src/playlist_sidebar.cpp',
    'src/server_setup_dialog.cpp',
    'src/songs_page.cpp',
    'src/thumbnail.cpp',
    'src/track_list_popover.cpp',
    'src/welcome_page.cpp'
)

inline_sources += files(
    'include/ui/thumbnail_page.tpp',
    'include/ui/thumbnail_widget.tpp'
)

subdir('templates')
