include_dirs += include_directories('include')

headers += files(
    'include/utility/async_queue.h',
    'include/utility/compatibility.h',
    'include/utility/exponential_blur.h',
    'include/utility/forward_declarations.h',
    'include/utility/fuzzy_search.h',
    'include/utility/global.h',
    'include/utility/g_object_guard.h',
    'include/utility/gtk_helpers.h',
    'include/utility/pixbuf_loader.h',
    'include/utility/posix_fd.h',
    'include/utility/resource_cache.h',
    'include/utility/settings.h',
    'include/utility/signals.h'
)

sources += files(
    'src/async_queue.cpp',
    'src/settings.cpp'
)

inline_sources += files(
    'include/utility/resource_cache.tpp'
)

